--- a/5. Sticky Navigation/style.css
+++ b/5. Sticky Navigation/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 main {
-    background-image: url('https://images.pexels.com/photos/303383/pexels-photo-303383.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+    background-image: url('https://images.pexels.com/photos/1363873/pexels-photo-1363873.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
     height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
@@ -40,4 +40,25 @@ main::before {
     width: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: -1;
+}
+
+main h1 {
+    font-size: 46px;
+    margin: -20px 0 20px;
+}
+
+main p {
+    font-size: 20px;
+    margin: 1px;
+}
+
+section h1 {
+    font-size: 150%;
+    margin: 20px 0;
+}
+
+section p {
+    color: #555;
+    line-height: 30px;
+    letter-spacing: 1.2px;
 }
