--- a/5. Sticky Navigation/style.css
+++ b/5. Sticky Navigation/style.css
@@ -15,6 +15,51 @@ body {
     margin: 0 auto;
 }
 
+header {
+    position: fixed;
+    background-color: #222;
+    top: 0;
+    left: 0;
+    right: 0;
+    transition: all 0.3s ease-in-out;
+}
+
+header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 0;
+    transition: all 0.3s ease-in-out;
+}
+
+header .container ul{
+    list-style-type: none;
+    list-style: none;
+    display: flex;
+}
+
+header .container a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    padding: 7px 15px;
+}
+header.active {
+    background-color: #fff;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+}
+header.active a {
+    color: #000;
+}
+header.active .container {
+    padding: 10px 0;
+}
+header a.current,
+header a:hover {
+    color: #c03;
+    font-weight: bold;
+}
+
 main {
     background-image: url('https://images.pexels.com/photos/1363873/pexels-photo-1363873.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
     height: 100vh;
