--- a/6. Responsive-Navbar/style.css
+++ b/6. Responsive-Navbar/style.css
@@ -82,3 +82,27 @@ header {
 .action_btn:active {
     scale: 0.95;
 }
+/* DROPDOWN MENU */
+.dropdown_menu {
+    position: absolute;
+    right: 2rem;
+    top: 60px;
+    width: 300px;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(15px);
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+/* RESPONSIVE DESING */
+
+@media (max-width:992px){
+    .navbar .links,
+    .navbar .action_btn {
+        display: none;
+    }
+
+    .navbar .toggle_btn {
+        display: block;
+    }
+}
