--- a/7. Delete-Button-Animation/style.css
+++ b/7. Delete-Button-Animation/style.css
@@ -12,3 +12,88 @@
     --blue: #2196f3;
     --light-blue: #51adf6;
   }
+
+  body {
+    width: 100vw;
+    height: 100vh;
+    background-color: #f5f5f5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .btn {
+    position: relative;
+    width: 200px;
+    height: 80px;
+    text-align: center;
+  }
+
+  .btn.open {
+    width: 400px;
+    height: 160px;
+  }
+  /* Front Side */
+  .front {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    line-height: 80px;
+    background-color: var(--red);
+    color: #fff;
+    font-size: 1.2rem;
+    cursor: pointer;
+    transition: background 0.15s ease;
+  }
+
+  .front:hover {
+    background-color: var(--light-red);
+  }
+  
+  /* Back Side */
+  .back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    background-color: #eee;
+    color: #222;
+    overflow: hidden;
+  }
+
+  .btn.open .back {
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.4);
+  }
+
+  .back p {
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+  }
+
+  .back button {
+    padding: 12px 20px;
+    width: 30%;
+    margin: 0 5px;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    transition: background 0.15s ease;
+  }
+
+  .back .btn_yes {
+    background-color: var(--light-blue);
+    color: #fff;
+  }
+
+  .back .btn_yes:hover {
+    background-color: var(--light-blue);
+  }
+
+  .back .btn_no {
+    color: var(--blue);
+  }
+
+  .back .btn_no:hover {
+    background-color: #ddd;
+  }
