--- a/7. Delete-Button-Animation/style.css
+++ b/7. Delete-Button-Animation/style.css
@@ -30,12 +30,15 @@
     text-align: center;
     transform-origin: center;
     transform-style: preserve-3d;
+    transition: width 0.8s cubic-bezier(0.23, 1, 0.32, 1), 
+    height 0.8 cubic-bezier(0.23, 1, 0.32, 1),
+    transform 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   }
 
   .btn.open {
     width: 400px;
     height: 160px;
-    transform: rotate(180deg);
+    transform: rotateX(180deg);
   }
   /* Front Side */
   .front {
