--- a/7. Delete-Button-Animation/style.css
+++ b/7. Delete-Button-Animation/style.css
@@ -31,7 +31,7 @@
     transform-origin: center;
     transform-style: preserve-3d;
     transition: width 0.8s cubic-bezier(0.23, 1, 0.32, 1), 
-    height 0.8 cubic-bezier(0.23, 1, 0.32, 1),
+    height 0.8s cubic-bezier(0.23, 1, 0.32, 1),
     transform 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   }
 
@@ -51,7 +51,8 @@
     font-size: 1.2rem;
     cursor: pointer;
     backface-visibility: hidden;
-    transition: background 0.15s ease;
+    transition: background 0.15s ease, 
+    line-height 0.8s cubic-bezier(0.23, 1, 0.32, 1) ;
   }
 
   .btn.open .front {
@@ -73,6 +74,7 @@
     color: #222;
     overflow: hidden;
     transform: translateZ(-2px) rotateX(180deg);
+    transition: box-shadow 0.8s ease;
   }
 
   .btn.open .back {
