--- a/6. Responsive-Navbar/style.css
+++ b/6. Responsive-Navbar/style.css
@@ -94,12 +94,13 @@ header {
     backdrop-filter: blur(15px);
     border-radius: 10px;
     overflow: hidden;
-    transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition: padding 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     
 }
 
 .dropdown_menu.open{
     height: auto;
+    padding: 18px;
 }
 
 .dropdown_menu li {
