--- a/11. Drum-Kit/style.css
+++ b/11. Drum-Kit/style.css
@@ -1,7 +1,9 @@
 html {
-    font-size: 10px;
-    background-image: linear-gradient( 76.3deg,  rgba(44,62,78,1) 12.6%, rgba(69,103,131,1) 82.8% );
-    background-size: cover;
+  font-size: 10px;
+  background-color: #ffffff;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cdefs%3E%3ClinearGradient id='a' x1='0' x2='0' y1='1' y2='0' gradientTransform='rotate(0,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%230FF'/%3E%3Cstop offset='1' stop-color='%23CF6'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' x1='0' x2='0' y1='0' y2='1' gradientTransform='rotate(0,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%23F00'/%3E%3Cstop offset='1' stop-color='%23FC0'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23FFF' fill-opacity='0' stroke-miterlimit='10'%3E%3Cg stroke='url(%23a)' stroke-width='66'%3E%3Cpath transform='translate(-5.6 -3.2) rotate(-3.2 1409 581) scale(0.976)' d='M1409 581 1450.35 511 1490 581z'/%3E%3Ccircle stroke-width='22' transform='translate(-20 8) rotate(-1.6 800 450) scale(0.996)' cx='500' cy='100' r='40'/%3E%3Cpath transform='translate(-5.6 12) rotate(-20 401 736) scale(0.996)' d='M400.86 735.5h-83.73c0-23.12 18.74-41.87 41.87-41.87S400.86 712.38 400.86 735.5z'/%3E%3C/g%3E%3Cg stroke='url(%23b)' stroke-width='20'%3E%3Cpath transform='translate(48 4.8) rotate(-1.2 150 345) scale(1.008)' d='M149.8 345.2 118.4 389.8 149.8 434.4 181.2 389.8z'/%3E%3Crect stroke-width='44' transform='translate(12 -24) rotate(-28.8 1089 759)' x='1039' y='709' width='100' height='100'/%3E%3Cpath transform='translate(-3.2 -3.2) rotate(-4.8 1400 132) scale(0.96)' d='M1426.8 132.4 1405.7 168.8 1363.7 168.8 1342.7 132.4 1363.7 96 1405.7 96z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
   }
   
   body,html {
@@ -9,34 +11,61 @@ html {
     padding: 0;
     font-family: sans-serif;
   }
+  .container {
+  width: 1370px;
+  height: 850px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.2);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  margin-top: 50px;
+  }
+  h1 {
+    margin-top: 220px;
+    text-transform: uppercase;
+    font-size: 5rem;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background: #00ff6e; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #00ff6e, #32a6cd); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #00ff6e, #32a6cd); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
   
+  }
   .keys {
     display: flex;
     flex: 1;
-    min-height: 100vh;
     align-items: center;
     justify-content: center;
+    margin-bottom: 200px;
   }
   
   .key {
-    border: .4rem solid rgba(0, 0, 0, 0.249);
+    border: .4rem solid rgba(0, 234, 255, 0.249);
     border-radius: .5rem;
     margin: 1rem;
     font-size: 1.5rem;
     padding: 1rem .5rem;
-    transition: all 0.07s ease;
+    transition: all .07s ease;
     width: 10rem;
     text-align: center;
-    color: white;
-    background: rgba(0,0,0,0.4);
-    text-shadow: 0 0 .5rem black;
+    color: rgb(255, 255, 255);
+    background: rgba(0, 29, 31, 0.4);
+    text-shadow: 0 0 .5rem rgba(0, 0, 0, 0.399);
     cursor: pointer;
   }
   
   .playing {
     transform: scale(1.1);
-    border-color: #ffc600;
-    box-shadow: 0 0 1rem #ffc600;
+    border-color: rgb(0, 234, 255);
+    box-shadow: 0 0 1rem rgb(0, 234, 255);
   }
   
   kbd {
@@ -48,6 +77,6 @@ html {
     font-size: 1.2rem;
     text-transform: uppercase;
     letter-spacing: .1rem;
-    color: #ffc600;
+    color: rgb(0, 234, 255);
   }
   
