--- a/17. Temperature-Converter/style.css
+++ b/17. Temperature-Converter/style.css
@@ -1,5 +1,44 @@
-* {
+@import url('https://fonts.googleapis.com/css2?family=Asap:wght@400;500&family=Orbitron:wght@400;500;600;700&display=swap');
+
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
+    background-color: black;
+}
+
+div {
+    height: 33.33vh;
+}
+
+#fahrenheit {
+    border-top: 4px solid white;
+    border-bottom: 4px solid white;
+}
+
+input[type=number] {
+    width: 100%;
+    height: 100%;
+    font-family: 'Asap', sans-serif;
+    background: black;
+    color: white;
+    font-size: 10em;
+    text-align: center;
+    border: none;
+    outline: none;
+}
+
+::-webkit-input-placeholder {
+    color: #222222;
+}
+
+::-moz-placeholder {
+    color: #222222;
+}
+
+:-ms-input-placeholder {
+    color: #222222;
 }
